--- a/src/Components/css/Center.css
+++ b/src/Components/css/Center.css
@@ -1,4 +1,3 @@
-/* Container styling for the cards */
 .container_1 {
   display: flex;
   flex-wrap: wrap;
@@ -9,11 +8,10 @@
   padding: 20px 0;
 }
 
-/* Card styling */
 .card_1 {
-  background-color: #f0f0f0;
-  border-radius: 10px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background: linear-gradient(135deg, #f0f8ff, #e0e0e0); 
+  border-radius: 15px; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
   width: 30%;
   margin-bottom: 20px;
@@ -22,54 +20,35 @@
   max-width: 30%;
 }
 
-/* Icon styling */
-.cardIcon_1 {
-  text-align: center;
-  margin-bottom: 20px;
-  font-size: 3em;
-}
-
-.iconBriefcase_1 {
-  font-size: 3em;
-  color: #c25555;
-}
-
-.iconWrench_1 {
-  font-size: 3em;
-  color: #9ac544;
-}
-
-/* Card title styling */
 .cardTitle_1 {
-  font-size: 1.2rem;
-  font-weight: bold;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 700;
   margin-bottom: 10px;
   text-align: center;
+  color: #003366; 
 }
 
-/* Card content styling */
 .cardContent_1 {
+  font-family: "Raleway", sans-serif;
   font-size: 1rem;
-  line-height: 1.5;
-  color: #555;
+  line-height: 1.6; 
+  color: #1f1f1f;
   text-align: justify;
 }
 
-/* Hover effect for the card */
 .card_1:hover {
-  background: linear-gradient(135deg, #365eee, #a9bcf2);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+  background: #f1f1f1;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   transform: translateY(-5px);
 }
 
 .card_1:hover .cardTitle_1 {
-  color: #fff;
-  transform: translateY(-5px);
+  color: #1ebea5;
+  transform: translateY(-2px);
 }
 
-/* Media Queries for Responsive Text and Layout */
 
-/* Tablets */
 @media (max-width: 1024px) {
   .card_1 {
     width: 45%;
@@ -77,41 +56,10 @@
   }
 
   .cardTitle_1 {
-    font-size: 1.2rem;
+    font-size: 1.3rem; 
   }
 
   .cardContent_1 {
-    font-size: 0.95rem;
-  }
-}
-
-/* Mobile */
-@media (max-width: 768px) {
-  .card_1 {
-    width: 100%;
-    max-width: 100%;
-  }
-
-  .cardTitle_1 {
-    font-size: 1.4rem;
-  }
-
-  .cardContent_1 {
-    font-size: 0.9rem;
-  }
-}
-
-/* Extra Small Mobile */
-@media (max-width: 480px) {
-  .cardTitle_1 {
-    font-size: 1.2rem;
-  }
-
-  .cardContent_1 {
-    font-size: 0.85rem;
-  }
-
-  .cardIcon_1 {
-    font-size: 2.5em;
+    font-size: 0.95rem; 
   }
 }
