--- a/src/Components/css/ContactBar.css
+++ b/src/Components/css/ContactBar.css
@@ -9,6 +9,7 @@
   border-top: 3px solid #fff; 
   border-radius: 1em;
   margin: 0 auto;
+  font-family: "Montserrat", sans-serif;
 }
 
 /* Social Links */
@@ -29,8 +30,27 @@
 
 .socialIcons a:hover {
   background-color: #fff; 
-  color: #333; 
   transform: scale(1.1);
+}
+
+.icon-bg-youtube:hover {
+  color: #FF0000;
+}
+
+.icon-bg-linkedin:hover {
+  color: #0077B5;
+}
+
+.icon-bg-facebook:hover {
+  color: #1877F2;
+}
+
+.icon-bg-twitter:hover {
+  color: #1DA1F2;
+}
+
+.icon-bg-insta:hover {
+  color: #C13584;
 }
 
 /* Email and Phone */
@@ -52,8 +72,11 @@
 }
 
 .contactItem:hover {
-  color: #ff9900; 
-  text-decoration: underline; 
+  color: #003366;
+  background-color: #f1f1f1; 
+  text-decoration: underline;
+  padding: .5em;
+  border-radius: 10px; 
 }
 
 .contactItem svg {
@@ -77,24 +100,5 @@
     justify-content: center; 
     flex-wrap: wrap; 
     gap: 20px; 
-  }
-}
-
-@media (max-width: 768px) {
-  .contactBar {
-    padding: 1.5em 5%; 
-  }
-
-  .socialIcons a {
-    font-size: 1.25rem;
-    padding: .5em; 
-  }
-
-  .contactItem {
-    font-size: 1rem;
-  }
-
-  .contactItem svg {
-    font-size: 1rem;
   }
 }
